# ennoia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  __init__.py  config.py  plot.py  rescore.py  runner.py
benchmark/data/: loader.py  prep.py
benchmark/eval/: cost.py  judge.py  metrics.py
benchmark/pipelines/: _retry.py  base.py  ennoia_pipeline.py  generator.py  langchain_pipeline.py  schemas.py
benchmark/results/: raw_latest.jsonl  summary_20260419T213503Z.csv  summary_latest.csv
docs/: adapters.md  api-reference.md  cli.md  concepts.md  filters.md  index.md  quickstart.md  schemas.md  serve.md  stores.md  testing.md
docs/cookbook/: cuad-benchmark.md  custom-adapter.md  mcp-agent.md  product-discovery-benchmark.md
ennoia/: __init__.py  __main__.py
ennoia/adapters/: __init__.py
ennoia/adapters/embedding/: __init__.py  base.py  openai.py  openrouter.py  protocols.py  sentence_transformers.py
ennoia/adapters/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  protocols.py
ennoia/cli/: __init__.py  api.py  config.py  factories.py  main.py  mcp.py
ennoia/craft/: __init__.py  agent.py  codeblock.py  entrypoint.py  prompts.py  validate.py
ennoia/events/: __init__.py  emitter.py  types.py
ennoia/index/: __init__.py  dag.py  exceptions.py  executor.py  extractor.py  pipeline.py  query.py  result.py  validation.py
ennoia/prompts/: __init__.py  benchmark_queries.md  craft.md
ennoia/schema/: __init__.py  base.py  fields.py  manifest.py  merging.py  operators.py  roots.py
ennoia/server/: __init__.py  api.py  auth.py  context.py  mcp.py
ennoia/store/: __init__.py  base.py  composite.py
ennoia/store/hybrid/: __init__.py  _qdrant_filter.py  _sql_filter.py  pgvector.py  qdrant.py
ennoia/store/structured/: __init__.py  memory.py  parquet.py  sqlite.py
ennoia/store/vector/: __init__.py  _numpy.py  filesystem.py  memory.py  qdrant.py
ennoia/testing/: __init__.py  fixtures.py  mocks.py
ennoia/utils/: __init__.py  filters.py  ids.py  imports.py
examples/: 01_getting_started.py  02_structural_extractor.py  03_semantic_extractor.py  04_extend_branching.py  README.md  _data.py  cli_walkthrough.sh  describe_schema.py  extend_branching.py  filter_miss.py  hello_world.py  multi_schema.py  schemas.py
examples/fixtures/: case_001.txt  filing_003.txt  note_002.txt
tests/: _pgvector_fake.py  _qdrant_fake.py  test_adapter_abc.py  test_adapter_anthropic.py  test_adapter_loop_lifecycle.py  test_adapter_ollama.py  test_adapter_openai.py  test_adapter_openai_embedding.py  test_adapter_openrouter.py  test_adapter_openrouter_embedding.py  test_adapter_sentence_transformers.py  test_benchmark_agent.py  test_benchmark_cost.py  test_benchmark_ennoia_product.py  test_benchmark_generator.py  test_benchmark_judge_product.py  test_benchmark_langchain_product.py  test_benchmark_metrics.py  test_benchmark_plot.py  test_benchmark_prep.py  test_benchmark_retry.py  test_benchmark_runner.py  test_benchmark_sample.py  test_benchmark_schemas.py  test_cli_api.py  test_cli_commands.py  test_cli_config.py  test_cli_factories.py  test_cli_mcp.py  test_cli_store_spec.py  test_collection_extractor.py  test_confidence_and_extend_context.py  test_craft.py  test_craft_entrypoint.py  test_dag.py  test_events.py  test_executor_edges.py  test_extractor_prompt.py  test_extractor_retry.py  test_filter_validation.py  (+40 more)
