[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ennoia"
version = "0.3.1"
description = "Declarative Document Indexing (DDI) Schemas for RAG — LLM-powered pre-indexing and hybrid retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [{ name = "Ennoia contributors" }]
keywords = ["rag", "retrieval", "indexing", "llm", "pydantic", "hybrid-search", "ddi-schemas", "pre-indexing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
openrouter = ["ennoia[openai]"]
sentence-transformers = ["sentence-transformers>=3", "numpy>=1.26"]
filesystem = ["pyarrow>=15", "pandas>=2.1", "numpy>=1.26"]
cli = ["typer>=0.12"]
qdrant = ["qdrant-client>=1.12"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3"]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "fastmcp>=2.0",
    "httpx>=0.27",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mike>=2.1",
]
benchmark = [
    "ennoia[openai]",
    "datasets>=2.20,<4",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "matplotlib>=3.9",
    "tiktoken>=0.7",
    "tqdm>=4.66",
]
all = [
    "ennoia[ollama,openai,anthropic,openrouter,sentence-transformers,filesystem,cli,qdrant,pgvector,server,benchmark]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1",
    "coverage[toml]>=7.5",
    "respx>=0.21",
    "ennoia[all]",
]

[project.entry-points.pytest11]
ennoia = "ennoia.testing.fixtures"

[project.scripts]
ennoia = "ennoia.cli.main:app"

[project.urls]
Documentation = "https://github.com/vunone/ennoia"
Source = "https://github.com/vunone/ennoia"
Issues = "https://github.com/vunone/ennoia/issues"
Changelog = "https://github.com/vunone/ennoia/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["ennoia"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer callbacks pass ``typer.Option()`` / ``typer.Argument()`` as defaults.
"ennoia/cli/main.py" = ["B008"]
"ennoia/cli/api.py" = ["B008", "E501"]
"ennoia/cli/mcp.py" = ["B008", "E501"]
# fastapi Depends() and long route-docs headers on the REST surface.
"ennoia/server/api.py" = ["B008", "E501"]
# Tests exercise typing aliases, intentionally verbose rows, and need to
# assert on generic exceptions from fastmcp-wrapped tool errors.
"tests/*" = ["UP007", "UP045", "B017", "F401"]
# Benchmark scripts contain long prompt strings and research-style code.
"benchmark/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["ennoia"]
exclude = ["**/.venv", "**/__pycache__", "**/node_modules", "benchmark"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.coverage.run]
branch = true
source = ["ennoia"]
omit = ["benchmark/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
